# MG-.REPT

./: CMakeLists.txt  ExpressionEvaluator.cpp  ExpressionEvaluator.h  ExpressionEvaluatorTests.cpp  MacroGeneratorTests.cpp  MacroProcessor.cpp  MacroProcessor.h  README.md  Utility.cpp  Utility.h  main.cpp
